# linkedin_profile_chatbot

./: .dockerignore  .gitignore  Dockerfile  README.md  gradio_config.toml  main.py  pyproject.toml  requirements.txt  run_gradio.py
.github/workflows/: update_space.yml
linkedin_profile_chatbot/: __init__.py  agent_tools.py  app.py  chat.py  core.py  gradio_app.py
me/: summary.txt
