[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "pybind11>=2.10.4", "cmake>=3.16"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedin_profile_chatbot"
dynamic = ["version"]
authors = [
    {name = "Nima Ghorbani"},
]
maintainers = [
    {name = "NIma Ghorbani"},
]
description = "A Chatbot to have discussion with a Linkedin Profile"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.11.10,<3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.0",
    "gradio==5.34.2",
    "loguru>=0.7.3",
    "notifiers>=1.3.6",
    "openai>=1.93.3",
    "openapi>=2.0.0",
    "pypdf>=5.7.0",
    "pypdf2>=3.0.1",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
]

[tool.uv]
python-preference = "only-managed"
python-downloads = "automatic"



[tool.setuptools_scm]
write_to = "linkedin_profile_chatbot/__init__.py"
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.setuptools.packages.find]
where = ["."]
include = ["linkedin_profile_chatbot*"]
exclude = ["tests*"]


